# lumino-mcp-server

./: pyproject.toml
docs/website/: index.html
docs/website/js/: terminal.js
src/: server-mcp.py
src/helpers/: log_analysis.py  utils.py
src/lumino_mcp/: __init__.py  __main__.py  client.py  helpers.py  server.py
src/lumino_mcp/helpers/: constants.py  events.py  log_analysis.py  prometheus.py  resource_topology.py
src/lumino_mcp/tools/: __init__.py  diagnostics.py  events.py  logs.py  pipeline.py  prom.py
