[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumino-mcp-server"
version = "1.0.0"
description = "MCP server for Kubernetes/OpenShift observability — focused tools for SRE workflows"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.0",
    "kubernetes>=32.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "cryptography>=42.0.0",
]

[project.scripts]
lumino-mcp = "lumino_mcp:main"

[project.urls]
Repository = "https://github.com/peet-rh/lumino-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/lumino_mcp"]
